2003-07-31  Danny Smith <dannysmith@users.sourceforge.net>

	* include/shellapi.h: Include all structs within pshpack2.h/
	poppack.h block.

2003-07-26  Danny Smith <dannysmith@users.sourceforge.net>

	* include/winuser.h (ASFW_ANY, LSFW_LOCK, LSFW_UNLOCK,
	LWA_COLORKEY, LWA_ALPHA): Guard with _WIN32_WINNT,
	_WIN32_WINDOWS, not WINVER.
	(AllowSetForegroundWindow,LockSetForegroundWindow,
	SetLayeredWindowAttributes): Likewise.
	(GetLayeredWindowAttributes,UpdateLayeredWindow): Add prototypes.
	* lib/user32.def (GetLayeredWindowAttributes,UpdateLayeredWindow):
	Add stubs.

2003-07-26  Eric R. Krause  <ekrause_98@users.sourceforge.net>

	* include/objidl.h (IMalloc): Fix typo.

2003-07-24  Danny Smith <dannysmith@users.sourceforge.net>

	* include/dkk/ntifs.h: Fix typo in guard for
	#pragma GCC system_header.

2003-07-22  Danny Smith <dannysmith@users.sourceforge.net>

	* include/objidl.h (PropVariant): Add CHAR cVal field
	to union.
	(FMTID_SummaryInformation, FMTID_DocSummaryInformation,
	FMTID_UserDefinedProperties): Declare.

2003-07-22  Danny Smith <dannysmith@users.sourceforge.net>

	* include/winbase.h (GetModuleHandleEx[AW]): Add prototypes.

2003-07-22  Danny Smith <dannysmith@users.sourceforge.net>

	* include/winbase.h (DUPLICATE_CLOSE_SOURCE,
	DUPLICATE_SAME_ACCESS): Remove defines.
	(HANDLE_FLAG_INHERIT, HANDLE_FLAG_PROTECT_FROM_CLOSE): Sync with
	ddk/ntapi.h defines.
	(SEM_*) : Likewise.
	* include/winnt.h (COMPRESSION_*, ACCESS_*, SYSTEM_*): Sync with 
	ddk/ntifs.h defines.
	(FILE_*): Likewise.
	(MEM_IMAGE, SEC_*): Likewise. 
	(DUPLICATE_CLOSE_SOURCE, DUPLICATE_SAME_ACCESS, 
	DUPLICATE_SAME_ATTRIBUTES): Sync with ddk/winddk.h defines.
	(TOKEN_*): Sync with ddk/ntifs.h defines. 
	* include/ddk/ntapi.h: Add comments noting definitions in
	winbase.h.
	* include/ddk/ntifs.h: Add comments noting definitions in
	winnt.h.
	* include/ddk/winddk.h: Add comments noting definitions in
	winnt.h.
 
2003-07-18  Danny Smith <dannysmith@users.sourceforge.net>
