@@ -1,6 +1,6 @@
 #ifndef _SHLOBJ_H
 #define _SHLOBJ_H
-#if __GNUC__ >=3
+#if __GNUC__ >= 3
 #pragma GCC system_header
 #endif
 
@@ -87,18 +87,19 @@ extern "C" {
 #define SFGAO_HASPROPSHEET	0x00000040L
 #define SFGAO_DROPTARGET	0x00000100L
 #define SFGAO_CAPABILITYMASK	0x00000177L
-#define SFGAO_LINK	0x00010000L
-#define SFGAO_SHARE	0x00020000L
-#define SFGAO_READONLY	0x00040000L
-#define SFGAO_GHOSTED	0x00080000L
+#define SFGAO_LINK		0x00010000L
+#define SFGAO_SHARE		0x00020000L
+#define SFGAO_READONLY		0x00040000L
+#define SFGAO_GHOSTED		0x00080000L
 #define SFGAO_DISPLAYATTRMASK	0x000F0000L
 #define SFGAO_FILESYSANCESTOR	0x10000000L
-#define SFGAO_FOLDER	0x20000000L
+#define SFGAO_FOLDER		0x20000000L
 #define SFGAO_FILESYSTEM	0x40000000L
 #define SFGAO_HASSUBFOLDER	0x80000000L
 #define SFGAO_CONTENTSMASK	0x80000000L
-#define SFGAO_VALIDATE	0x01000000L
-#define SFGAO_REMOVABLE	0x02000000L
+#define SFGAO_VALIDATE		0x01000000L
+#define SFGAO_REMOVABLE		0x02000000L
+#define SFGAO_COMPRESSED	0x04000000L
 #define STRRET_WSTR	0
 #define STRRET_OFFSET	1
 #define STRRET_CSTR	2
@@ -285,6 +286,9 @@ extern "C" {
 #define SV2GV_CURRENTVIEW ((UINT)-1)
 #define SV2GV_DEFAULTVIEW ((UINT)-2)
 
+typedef ULONG SFGAOF;
+typedef DWORD SHGDNF;
+
 typedef struct _IDA {
 	UINT cidl;
 	UINT aoffset[1];
@@ -342,9 +346,13 @@ typedef enum tagSHGDN {
 	SHGDN_FORPARSING=0x8000
 } SHGNO;
 typedef enum tagSHCONTF {
-	SHCONTF_FOLDERS=32,
-	SHCONTF_NONFOLDERS=64,
-	SHCONTF_INCLUDEHIDDEN=128
+	SHCONTF_FOLDERS = 32,
+	SHCONTF_NONFOLDERS = 64,
+	SHCONTF_INCLUDEHIDDEN = 128,
+	SHCONTF_INIT_ON_FIRST_NEXT = 256,
+	SHCONTF_NETPRINTERSRCH = 512,
+	SHCONTF_SHAREABLE = 1024,
+	SHCONTF_STORAGE = 2048
 } SHCONTF;
 typedef struct _STRRET {
 	UINT uType;
@@ -478,8 +486,8 @@ DECLARE_INTERFACE_(IShellPropSheetExt, IUnknown)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-    STDMETHOD(AddPages)(THIS_ LPFNADDPROPSHEETPAGE,LPARAM) PURE;
-    STDMETHOD(ReplacePage)(THIS_ UINT,LPFNADDPROPSHEETPAGE,LPARAM) PURE;
+	STDMETHOD(AddPages)(THIS_ LPFNADDPROPSHEETPAGE,LPARAM) PURE;
+	STDMETHOD(ReplacePage)(THIS_ UINT,LPFNADDPROPSHEETPAGE,LPARAM) PURE;
 };
 typedef IShellPropSheetExt *LPSHELLPROPSHEETEXT;
 
@@ -490,7 +498,7 @@ DECLARE_INTERFACE_(IExtractIcon, IUnknown)  /* exic */
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-    STDMETHOD(GetIconLocation)(THIS_ UINT,LPSTR,UINT,int*,PUINT) PURE;
+	STDMETHOD(GetIconLocation)(THIS_ UINT,LPSTR,UINT,int*,PUINT) PURE;
 	STDMETHOD(Extract)(THIS_ LPCSTR,UINT,HICON*,HICON*,UINT) PURE;
 };
 typedef IExtractIcon *LPEXTRACTICON;
